--- a/picturelibrary/build.gradle
+++ b/picturelibrary/build.gradle
@@ -4,15 +4,18 @@ group='com.github.gyymz1993'
 
 
 android {
-    compileSdkVersion 26
-    buildToolsVersion "26.0.2"
+    compileSdkVersion rootProject.ext.versions.compileSdkVersion
+    buildToolsVersion rootProject.ext.versions.buildToolsVersion
 
     defaultConfig {
-        minSdkVersion 19
-        targetSdkVersion 26
-        versionCode 1
-        versionName "1.0.0"
-        vectorDrawables.useSupportLibrary = true
+        minSdkVersion rootProject.ext.versions.minSdkVersion
+        targetSdkVersion rootProject.ext.versions.targetSdkVersion
+        versionCode rootProject.ext.versions.versionCode
+        versionName rootProject.ext.versions.versionName
+        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        //MultiDex分包方法
+        multiDexEnabled true
+
     }
 
     buildTypes {
@@ -33,11 +36,13 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     implementation project(':ucrop')
-    implementation 'com.android.support:appcompat-v7:26.1.0'
-    implementation 'com.android.support:recyclerview-v7:26.1.0'
+    //noinspection GradleCompatible
+    api rootProject.ext.dependencies["appcompat_v7"]
+    api rootProject.ext.dependencies["recyclerview-v7"]
     /*Rx引入包*/
-    implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
     /*RxAndroid*/
-    implementation 'io.reactivex.rxjava2:rxjava:2.1.0'
-    implementation 'com.github.bumptech.glide:glide:4.2.0'
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.0'
+    implementation 'com.github.bumptech.glide:glide:4.8.0'
+    //implementation 'com.yalantis:ucrop:1.4.1'
 }
